# taurob_arm_erl

./: LICENSE  README.md  prepare.sh
erl_jog_arm/: CMakeLists.txt  package.xml
erl_jog_arm/config/: jog_control_lwa4d.yaml  jog_control_xbox.config.yaml
erl_jog_arm/launch/: jog_control_lwa4d.launch  jog_schunk_ik.launch
erl_jog_arm/src/: gripper_cmd.py  joy_to_twist.py
erl_lwa4d/: CMakeLists.txt  package.xml
erl_lwa4d/config/: arm_driver.yaml  gazebo_pid.yaml  joint_configurations.yaml  joint_limits.yaml  teleop_jog_settings.yaml  xbox_wireless.config.yaml
erl_lwa4d/launch/: arm.launch  arm_pg70.launch  cartesian_controller.launch  dashboard.launch  lwa4d_jog.launch  sim.launch  sim_with_gripper.launch  teleop_joystick_jogging.launch  test_description.launch
erl_lwa4d_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
erl_lwa4d_pg70_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
erl_pg70/: CMakeLists.txt  package.xml
erl_schunk_pg70/: CMakeLists.txt  package.xml
erl_schunk_pg70/config/: gripper_driver.yaml
erl_schunk_pg70/launch/: dashboard.launch  robot.launch  sim.launch  test_description.launch
erl_schunk_pg70/urdf/: pg70_standalone.urdf.xacro
erl_schunk_pg70/urdf/pg70/: pg70.transmission.xacro  pg70.urdf.xacro
erl_taurob_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
taurob_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
taurob_schunk_lwa4d/: CMakeLists.txt  package.xml
taurob_schunk_lwa4d_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+121 files in other folders)
