<package format="2">
  <name>erl_schunk_pg70</name>
  <version>0.5.0</version>

  <description> erl_schunk_pg70 </description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_pg70</url>

  <author email="johndoe@bham.ac.uk">Manolis</author>
  <maintainer email="johndoe@bham.ac.uk">Manolis</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>rostest</depend>

  <exec_depend>canopen_motor_node</exec_depend>
  <exec_depend>cob_cartesian_controller</exec_depend>
  <exec_depend>cob_command_gui</exec_depend>
  <exec_depend>cob_control_mode_adapter</exec_depend>
  <exec_depend>cob_dashboard</exec_depend>
  <exec_depend>cob_description</exec_depend>
  <exec_depend>cob_gazebo_ros_control</exec_depend>
  <exec_depend>cob_helper_tools</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
